--- a/static/requirements.txt
+++ b/static/requirements.txt
@@ -1,5 +1,28 @@
-flask==2.3.3
+# Core Web Framework
+flask==3.0.0
+flask-cors==4.0.1
+flask-socketio==5.3.5
+python-socketio==5.10.0
+
+# AI/ML - Local LLM
 gpt4all==2.7.0
-flask-cors==4.0.0
+torch==2.1.2
+transformers==4.36.2
+
+# Utilities
 qrcode==7.4.2
-pillow==10.0.0
+pillow==10.2.0
+python-dotenv==1.0.0
+
+# Networking & Communication
+websockets==12.0
+requests==2.31.0
+
+# Optional but Recommended
+uvicorn==0.25.0
+fastapi==0.108.0
+pydantic==2.5.3
+
+# Development/Debugging (Optional)
+python-multipart==0.0.6
+watchdog==3.0.0
